# wasm-stl-thumbnailer

./: Cargo.toml  README.md  asset-manifest.json  index.html
performance-test/: package-lock.json  package.json
performance-test/src/: App.js  Magnet_holder.stl  Performance.js  Usage.js  index.js
src/: lib.rs  model.rs  resources.rs  resouresbackup.rs  shader.wgsl  texture.rs
static/js/: main.b0b9918a.js  main.b0b9918a.js.map  main.cf9a0c85.js  main.cf9a0c85.js.map  main.f716f45f.js  main.f716f45f.js.LICENSE.txt  main.f716f45f.js.map
static/media/: wasm_stl_thumbnailer_bg.bc42042ab0faaa75ef08.wasm
