[package]
name = "wasm-stl-thumbnailer"
version = "0.1.0"
authors = ["Adam Gerhant <https://github.com/adamgerhant>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1"
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
stl_io = "0.7.0"
getrandom = { version = "0.2", features = ["js"] }
flume = "0.10.12"
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.19.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "=0.3.67"
nalgebra = "0.32.3"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[[bin]]
name = "tutorial9-models"
path = "src/main.rs"

